--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ nav{
     height: 70px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 nav a{
     text-decoration: none;
